src/test/ui/async-await/edition-deny-async-fns-2015.stderr
error[E0670]: `async fn` is not permitted in the 2015 edition
  --> $DIR/edition-deny-async-fns-2015.rs:3:1
   |
LL | async fn foo() {}
   | ^^^^^
   |
   = note: to use `async fn`, switch to Rust 2018
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in the 2015 edition
  --> $DIR/edition-deny-async-fns-2015.rs:5:12
   |
LL | fn baz() { async fn foo() {} }
   |            ^^^^^
   |
   = note: to use `async fn`, switch to Rust 2018
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in the 2015 edition
  --> $DIR/edition-deny-async-fns-2015.rs:7:1
   |
LL | async fn async_baz() {
   | ^^^^^
   |
   = note: to use `async fn`, switch to Rust 2018
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in the 2015 edition
  --> $DIR/edition-deny-async-fns-2015.rs:8:5
   |
LL |     async fn bar() {}
   |     ^^^^^
   |
   = note: to use `async fn`, switch to Rust 2018
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in the 2015 edition
  --> $DIR/edition-deny-async-fns-2015.rs:14:5
   |
LL |     async fn foo() {}
   |     ^^^^^
   |
   = note: to use `async fn`, switch to Rust 2018
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in the 2015 edition
  --> $DIR/edition-deny-async-fns-2015.rs:18:5
   |
LL |     async fn foo() {}
   |     ^^^^^
   |
   = note: to use `async fn`, switch to Rust 2018
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in the 2015 edition
  --> $DIR/edition-deny-async-fns-2015.rs:36:9
   |
LL |         async fn bar() {}
   |         ^^^^^
   |
   = note: to use `async fn`, switch to Rust 2018
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in the 2015 edition
  --> $DIR/edition-deny-async-fns-2015.rs:26:9
   |
LL |         async fn foo() {}
   |         ^^^^^
   |
   = note: to use `async fn`, switch to Rust 2018
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in the 2015 edition
  --> $DIR/edition-deny-async-fns-2015.rs:31:13
   |
LL |             async fn bar() {}
   |             ^^^^^
   |
   = note: to use `async fn`, switch to Rust 2018
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0706]: functions in traits cannot be declared `async`
  --> $DIR/edition-deny-async-fns-2015.rs:18:5
   |
LL |     async fn foo() {}
   |     -----^^^^^^^^^^^^
   |     |
   |     `async` because of this
   |
   = note: `async` trait functions are not currently supported
   = note: consider using the `async-trait` crate: https://crates.io/crates/async-trait

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0670, E0706.
For more information about an error, try `rustc --explain E0670`.
